--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jul  8 02:31:30 2003  Tim Janik  <timj@gtk.org>
+
+	* bsemidisynth.[hc]: added slot for postprocessing synthesizer.
+	default to 16 voices.
+
 Mon Jul  7 16:42:05 2003  Tim Janik  <timj@gtk.org>
 
 	* bsestorage.c (wstore_data_handle_reader): remove debugging code.
