--- a/docs/site-news.texi
+++ b/docs/site-news.texi
@@ -11,6 +11,16 @@
 @unnumbered What's New?
 
 
+@newsTitle{Thursday 10 Jul 2003, LinuxTag 2003}
+
+Stefan Westerfeld and Tim Janik are going to the
+@uref{http://www.linuxtag.org/2003/de/index.html,,LinuxTag 2003}
+this Weekend (11.-13. July). We'll probably hang out at the GNOME
+and KDE booths if people want to catch us to talk about @beast{},
+@uref{http://www.arts-project.org,,aRts} or
+@uref{http://sfk.evilplan.org/csl/,,CSL}.
+
+
 @newsTitle{Wednesday 25 Jun 2003, BEAST Bugfix Realease}
 
 BEAST/BSE version 0.5.3 is available in the
