--- a/docs/site-contact.texi
+++ b/docs/site-contact.texi
@@ -16,6 +16,16 @@ available at
 The archives of the mailing list can be read at
 @uref{http://mail.gnome.org/archives/beast/}.
 
+
+@unnumbered IRC
+
+There's a @code{#beast} channel on the GimpNet IRC Network
+(Server: @code{irc.gimp.org}, Port: @code{6666}), used to
+discuss BEAST/BSE development issues and user questions.
+The core developers usually hang out there, though they may
+be idle for many hours a day.
+
+
 @unnumbered Contacts
 
 @itemize
