--- a/docs/site-news.texi
+++ b/docs/site-news.texi
@@ -14,7 +14,7 @@
 @newsTitle{Thursday 10 Jul 2003, BEAST IRC Channel & LinuxTag 2003}
 
 Stefan Westerfeld and Tim Janik are going to the
-@uref{http://www.linuxtag.org/2003/de/index.html,,LinuxTag 2003}
+@uref{http://www.linuxtag.org/2003/en/index.html,,LinuxTag 2003}
 this Weekend (11.-13. July). We'll probably hang out at the GNOME
 and KDE booths if people want to catch us to talk about @beast{},
 @uref{http://www.arts-project.org,,aRts} or
