--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Jul 14 16:39:48 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstparamview.c: properly destroy all parameters.
+
+	* beast-gtk/gxk/gxktexttools.c: free g_get_current_dir() result.
+
 Fri Jul 11 03:09:42 2003  Tim Janik  <timj@gtk.org>
 
 	* docs/site-news.texi: announce german paper and irc channel.
