--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 Overview of Changes in BEAST/BSE 0.5.4:
 
 * Added support for per-track and per-song special effects
+* Fixes to compile on NetBSD
 * Miscellaneous bug fixes
 
 Overview of Changes in BEAST/BSE 0.5.3:
