--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Mon Jul 14 20:13:05 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstpartdialog.c (bst_part_dialog_init): add shadow around
+	piano roll widget which it doesn't draw itself anymore.
+
+	* beast-gtk/bstpianoroll.c: some drawing code cleanups. fixed hpanel/
+	vpanel drawing. removed outer shadow.
+
+	* beast-gtk/bsttrackroll.[hc]: s/proll/troll/ in BstTrackRollDrag.
+
 Mon Jul 14 16:39:48 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstparamview.c: properly destroy all parameters.
