--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jul 17 04:00:12 2003  Tim Janik  <timj@gtk.org>
+
+	* sfidl-namespace.cc: make unknown symbols an error.
+
 Mon Jul 14 16:59:25 2003  Tim Janik  <timj@gtk.org>
 
 	* sficomport.c: guard against systems not having ERESTART.
