--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXMES:
+- fix glue gc assertion after sfi_glue_describe_proc("")
 - change default zoom factor in sample view
 - add Solo propety to tracks
 - add frequency splitter/multiplier (plus cent-wise detune?)
@@ -73,7 +74,12 @@ FIXMES:
 - fix BseSong::denominator SpinButton arrows not working
 * eliminate everything that fgrep -i fixme/hack reveals
 
+TODO:
+- implament humanizer scheme script that offsets notes by a few random ticks
+- add text about MIDI realtime synthesis via external MIDI devices to beast overview paper
+
 DOCS:
+- fix umlauts in utf8 texi files [Alper]
 - make beast recognize and view .markup files from the command line
 - add QuickStart section on piano roll usage, esp. copy+pasting
 - implement Playback facility in doc browser for .bse file links
@@ -88,10 +94,53 @@ DOCS:
   due to unnumbered sections being counted as well. unnumbered sections should
   be counted seperately (e.g. as #node-u1-0-0-0). [alper]
 
+PianoRoll:
+- implement HFlip selection script
+- play notes when inserted into piano roll
+- popdown piano roll when parts are removed
+- fix piano rolldialog wrg GDK_Escape (ala trackroll)
+- cleanup piano tick bar
+- portamento-to-note in piano roll? probably need special effects
+- add to piano roll dialog:
+  part-link properties:
+  - loop-count
+  - length (tact-entry)
+  - part coment
+  this fixes tact-kind queries for piano roll editing
+  and song position pointer placement
+- hotkey in piano roll to replay project
+- hscrollbar resizable (like cubase) or last-tick + 1 tact
+- ctrl+move should copy (DND style modifier)
+- tooltip follows mouse and shows current note/tact
+- hotkey fuer play song
+- play notes upon insert (click on piano roll window)
+- two notes from 0..15 and 16..32 look like one
+- ctrl/shift modifiers for selection
+- fix hscrollbar  (BsePart end position implementation)
+- select loop for playback during editing
+
+Snet Router:
+- ctrl+move should clone objects (DND style modifier) 
+- support selections for group moves
+- add property editor dialog which contains intersection of properties from selected objects
+- middle mouse button on canvas background should scroll
+
+TrackView:
+- resizable scrollbar
+- context menu with delete, move, insert (double click inserts?)
+
 SClock:
 - incremental sort for median
 - calc non-linear slope in one go
 - new clock type that switches to linear once >QUEUE_LENGTH
+
+MEETING-RESULTS:
+- piano and track roll scrolling implemented with secondary scrollbar
+- piano roll dialog gains partlink property editor
+- item links: (where (link 3 "TrackLink::LinkTrack::Cool"))
+              (where (3 "tree:sopidgsdf:sdggsdf"))
+              (where (link 3 "tree::sopidgsdf::sdggsdf"))
+- prop flag: SFI_PARAM_SKIP_DEFAULT
 
 Random:
 - object tree backbone/trunk/tribe type for project, server and workbench
@@ -110,14 +159,6 @@ Random:
 : propagate mtime changes through cascaded data handles (e.g. for dcache)
 : gsldatacache.c: nuke blocks upon reopen if mtime changed
 : clone handle caller must be fetched from stack
-
-MEETING-RESULTS:
-- piano and track roll scrolling implemented with secondary scrollbar
-- piano roll dialog gains partlink property editor
-- item links: (where (link 3 "TrackLink::LinkTrack::Cool"))
-              (where (3 "tree:sopidgsdf:sdggsdf"))
-              (where (link 3 "tree::sopidgsdf::sdggsdf"))
-- prop flag: SFI_PARAM_SKIP_DEFAULT
                             
 General BSE:
 - object tree backbone/trunk/tribe type for project, server and workbench (treeroot storageroot)
@@ -186,44 +227,6 @@ GSL:
 - [timj]        7 6 Async DCache read-ahead thread creation
 - [stw/timj]    6 5 filter evaluate function (to draw graph)
 
-Snet Router:
-- ctrl+move should clone objects (DND style modifier) 
-- support selections for group moves
-- add property editor dialog which contains intersection of properties from selected objects
-- middle mouse button on canvas background should scroll
-
-TrackView:
-- resizable scrollbar
-- context menu with delete, move, insert (double click inserts?)
-
-PianoRoll:
-- swap h/v zoom spinner in piano roll
-- play notes when inserted into piano roll
-- popdown piano roll when parts are removed
-- fix piano roll [VH]PANEL_BG_GC() usage and GDK_Escape (ala trackroll)
-- clenup piano tick bar
-- portamento-to-note in piano roll? probably need special effects
-- add to piano roll dialog:
-  part-link properties:
-  - loop-count
-  - length (tact-entry)
-  - part coment
-  this fixes tact-kind queries for piano roll editing
-  and song position pointer placement
-- hotkey in piano roll to replay project
-- piano roll: pasting doesn't quantize (without later movement)
-- hscrollbar resizable (like cubase) or last-tick + 1 tact
-- ctrl+move should copy (DND style modifier)
-- draw ces and fes with red lines
-- tooltip follows mouse and shows current note/tact
-- hotkey fuer play song
-- play notes upon insert (click on piano roll window)
-- two notes from 0..15 and 16..32 look like one
-- ctrl/shift modifiers for selection
-- quantize upon paste
-- fix hscrollbar  (BsePart end position implementation)
-- select loop for playback during editing
-
 GUI features:
 - entry focus watcher: for property editing entries, do:
   ::focus_in   - set changed_flag=0
@@ -250,6 +253,7 @@ sfidl:
   fixes:
   - support N/A choice values, currently hardcoded for BseErrorType
   - syntax for neutral values in choices
+  - allow enum prototypes?
   extensions:
   - need support for real enums in bserecords.sfidl
   - choices need support for icons per value
