--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jul 18 05:03:21 2003  Tim Janik  <timj@gtk.org>
+
+	* docs/site-news.texi: 
+	* docs/site-download.texi: announce suse rpms.
+
 Thu Jul 17 03:41:55 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstparam.[hc]: added param implementation that operates
