--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,14 @@
+Fri Jul 18 06:41:08 2003  Tim Janik  <timj@gtk.org>
+
+	* gslloader-gslwave.c: override osc_freq of external data handles.
+
+	* gsldatahandle.[hc]:
+	(gsl_data_handle_override): new function to allow overriding of
+	setup parameters for closed data handles.
+	(gsl_data_handle_open): support overriding of bit_depth, mix_freq
+	and osc_freq.
+	(gsl_data_handle_close): zero out ->setup.
+
 Thu Jul 17 03:50:23 2003  Tim Janik  <timj@gtk.org>
 
 	* bsemidievent.[hc]: added bse_midi_event_signal() to create
