--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jul 18 19:17:54 2003  Tim Janik  <timj@gtk.org>
+
+	* test/drum-test.bse: added drum module test.
+
 Fri Jul 18 18:45:44 2003  Tim Janik  <timj@gtk.org>
 
 	* configure.in (BST_RELEASE_CANDIDATE): up version number to 0.5.4,
