--- a/TODO
+++ b/TODO
@@ -7,8 +7,6 @@ FIXMES:
 - add frequency output, offering bpm, 1/1 1/4 1/3 notes frequencies
 - fix BseAmplifier: defaults: gain=0, exponential-control=false
 - add sfisclock.h to sfi.h
-- add QuickStart section on wave seleciton
-- add QuickStart section on postprocessing effects
 - <mg> quick rfe based on 0.5.3: implement multiple selection in the wave loader file selector and have an add button that does not close the dialog
 - add demo song
 - add Reset menu item to BseSource menu
@@ -81,6 +79,8 @@ TODO:
 
 DOCS:
 - fix umlauts in utf8 texi files [Alper]
+- add QuickStart section on wave selection
+- add QuickStart section on postprocessing effects
 - make beast recognize and view .markup files from the command line
 - add QuickStart section on piano roll usage, esp. copy+pasting
 - implement Playback facility in doc browser for .bse file links
