--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jul 19 01:50:45 2003  Tim Janik  <timj@gtk.org>
+
+	* configure.in: throw out beast-0.5.4-rc1.tar.gz.
+
 Fri Jul 18 19:17:54 2003  Tim Janik  <timj@gtk.org>
 
 	* test/drum-test.bse: added drum module test.
