--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jul 21 14:47:40 2003  Tim Janik  <timj@gtk.org>
+
+	* configure.in: release beast-0.5.4.tar.gz.
+
 Sat Jul 19 01:50:45 2003  Tim Janik  <timj@gtk.org>
 
 	* configure.in: throw out beast-0.5.4-rc1.tar.gz.
