--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jul 22 14:02:03 2003  Tim Janik  <timj@gtk.org>
+
+	* docs/site-news.texi: announce release.
+
 Mon Jul 21 14:47:40 2003  Tim Janik  <timj@gtk.org>
 
 	* configure.in: release beast-0.5.4.tar.gz.
