--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jul 23 02:05:24 2003  Tim Janik  <timj@gtk.org>
+
+	* sficomport.c: reset pfd.events to 0 once the fd becomes -1.
+
 Wed Jul 23 19:19:36 2003  Stefan Westerfeld <stefan@space.twc.de>
 
 	* sfidl*.cc sfidl*.h: cleanup of class names.
