remove MIDI_MAX_CHANNEL assertions, up this to 99.
Thu Jul 24 01:28:33 2003  Tim Janik  <timj@gtk.org>

        * bsemidievent.[hc]: remove MIDI_MAX_CHANNEL assertions, up this to 99.

        * bsemidireceiver.[hc]: remove MIDI_MAX_CHANNEL assertions.
        add voice module ref counting.
        (bse_midi_receiver_voices_pending): check poending voices for a specific
        midi-channel.

        * bsemidivoice.c: don't export private functions.

        * bseproject.[hc]: provide a single midi-receiver for the whole project.

        * bsetrack.[hc]: don't provide own midi receiver, use the one from our
        song instead. added midi-channel property per track, per default, an
        internal midi-channel > MIDI_MAX_CHANNEL is used.

        * bsesong.[hcp]*: fetch midi-receiver from project once parent changes.
        provide tracks with midi receiver when creating voices. honour
        midi-channels of tracks.

        * bsessequencer.c: operate on the song's midi receiver, honour
        midi-channels of tracks.

svn path=/trunk/; revision=1202

--- a/TODO
+++ b/TODO
@@ -1,4 +1,12 @@
 FIXMES:
+- forward external midi events to project's midi-receiver, then switch midi-synths to it
+- add midi-channel property to tracks
+- flag voices in midi receiver for monosynth tracks as monosynth
+- queue note-on and note-off as voice-changes on mono-synth voices
+- ignore note-off for monosynth voices if note-off-freq!=voice->freq
+- add BseMonoKeyboard with midi-channel selection, duplicating mono-synth voice signals 
+- if Track::Synth is NULL, disconnect post-process-subsynth from track-context-merger
+- show Messgae: progress seen 19/15 items only with -:d
 - fix nominator/denomiator settings in songs
 - fix forcing unique names for children of a project 
 - fix glue gc assertion after sfi_glue_describe_proc("")
