--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jul 27 02:39:05 2003  Tim Janik  <timj@gtk.org>
+
+	* incremented version to 0.5.5-rc1, binary age 0, interface age 0.
+
 Sat Jul 26 04:42:09 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bsttrackview.c: added midi channel to track roll.
