--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 Overview of Changes in BEAST/BSE 0.5.5:
 
+* New (ported) modules:
+  DavCanyonDelay - Canyon Echo by David A. Bartold
 * Implemented ability to use sequencer as modulation source
 * Added monophonic MIDI keyboard module
 * Added support for external MIDI events in song tracks
