--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,9 @@
 Overview of Changes in BEAST/BSE 0.5.5:
 
 * New (ported) modules:
-  DavCanyonDelay - Canyon Echo by David A. Bartold
+  DavCanyonDelay  - Canyon Echo by David A. Bartold
+  BseMonoKeyboard - Monophonic MIDI Keyboard input module
 * Implemented ability to use sequencer as modulation source
-* Added monophonic MIDI keyboard module
 * Added support for external MIDI events in song tracks
 * Added prototype support to IDL compiler [Stefan Westerfeld]
 * Work around PTH poll() bug on NetBSD [Ben Collver, Tim Janik]
