--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jul 28 05:25:03 2003  Tim Janik  <timj@gtk.org>
+
+	* acbeast.m4 (ac_vm): enable warning options for C++ code.
+	fixed CXXFLAGS setup which was wrongly using CFLAGS.
+
 Mon Jul 28 04:07:08 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/tsmview.c: add test textget handler.
